# Polars-Python

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: python.yml
app/: __main__.py  aplicacao.py  app.py  main.py  streamlit_app.py
app/contrato_de_dados/: contrato_saida.py
app/etl/: dataframe_utils.py  etl_routine.py  loading_data.py  reading_data.py  transforming_data.py  valida_contrato.py
app/frontend/: meu_app.py
app/presentation/: images.py  jinja_template.py  pdf.py  polars_to_html.py
app/utils/: my_log.py  my_time.py
config/: log_config.ini  polars.json
data/processed/: enade.parquet  enade_2017.parquet  enade_2018.parquet  enade_2019.parquet  enade_2021.parquet
data/raw/: conceito_enade_2021.xlsx
docs/: index.md
docs/pastas/: index.md
docs/pastas/arquivos_soltos/: index.md
docs/postgre_schema/: README.md  public.enade.md  schema.json
docs/python/etl/: dataframe_utils.md  etl_routine.md  loading_data.md  reading_data.md  transforming_data.md
logs/: my_log.py
notebooks/: exploring.ipynb  learning.ipynb  main.ipynb
pastas/: index.html
pastas/arquivos_soltos/: index.html
pastas/arquivos_soltos/gitignore/: index.html
pastas/arquivos_soltos/mkdocs/: index.html
pastas/arquivos_soltos/poetry/: index.html
pastas/arquivos_soltos/pre-commit-config/: index.html
pastas/arquivos_soltos/pyproject/: index.html
pastas/arquivos_soltos/read_me/: index.html
pastas/configuracoes/: index.html
pastas/configuracoes/logging/: index.html
pastas/configuracoes/polars/: index.html
pastas/dados/: index.html
pastas/dados/originais/: index.html
pastas/dados/processados/: index.html
pastas/logs/: index.html
pastas/logs/debug/: index.html
pastas/logs/error/: index.html
pastas/logs/info/: index.html
pastas/recursos/: index.html
pastas/relatorios/: index.html
pastas/sql/: index.html
pastas/src/: index.html
pastas/testes/: index.html
postgre_schema/: index.html
postgre_schema/public.enade/: index.html
python/: index.html
python/apresentacao/: index.html
python/apresentacao/images/: index.html
python/apresentacao/jinja_template/: index.html
python/apresentacao/pdf/: index.html
python/apresentacao/polars_to_html/: index.html
python/etl/: index.html
python/etl/dataframe_utils/: index.html
python/etl/etl_routine/: index.html
python/etl/loading_data/: index.html
python/etl/reading_data/: index.html
python/etl/transforming_data/: index.html
python/utils/: index.html
python/utils/duckdb_sql/: index.html
python/utils/my_log/: index.html
python/utils/my_time/: index.html
recursos/: index.html
relatorios/: index.html
resources/style/: style1.css
resources/styles/: enade.css  style1.css
resources/template/: template1.html
resources/templates/: enade.html  template1.html
search/: search_index.json
sql/: index.html
sql/query/: enade.sql  enade_2021.sql  enade_avg.sql  enade_rank.sql
src/: __main__.py  app.py
src/contrato_de_dados/: contrato_base.py  contrato_entrada.py  contrato_final.py  contrato_saida.py
src/etl/: dataframe_utils.py  etl_routine.py  filtros.py  loading_data.py  my_extraction.py  my_load.py  my_transform.py  reading_data.py  transforming_data.py  valida_contrato.py
src/pdf/: generating_pdf.py
src/presentation/: images.py  jinja_template.py  pdf.py  polars_to_html.py
src/utils/: carregar_env.py  duckdb_sql.py  read_sql_query.py
testes/: index.html
testes/t1/: index.html
testes/t2/: index.html
tests/contrato_de_dados/: test_contrato_base.py  test_contrato_entrada.py  test_contrato_final.py  test_contrato_saida.py
tests/etl/: test_transforming_data.py
