[tool.poetry]
name = "polars-python"
version = "0.1.0"
description = ""
authors = ["Fenyx Forte <fenyx.studies@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polars = ">=1.1.0"
duckdb = "^0.10.3"
jinja2 = "^3.1.4"
pdfkit = "^1.0.0"
fastexcel = "^0.10.4"
weasyprint = "^62.2"
mkdocs = "^1.6.0"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}
mkdocs-material = "^9.5.28"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.4.6"
bandit = "^1.7.8"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
coverage = "^7.5.3"
pytest-cov = "^5.0.0"
faker = "^25.3.0"

[tool.ruff]
line-length = 80
target-version = "py310"
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py", "src/*.py", "tests/*.py"]

[tool.ruff.lint]
ignore = ["D203", "E111", "E203", "F401"]

[tool.black]
line-length = 80
target-version = ['py310']
src = ["src/", "tests/"]

[tool.bandit]
skips = ["B101"]

[tool.pytest.ini_options]
addopts = "-ra --cov"
testpaths = ["tests"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
