[tool.poetry]
name = "polars-python"
version = "0.1.0"
description = ""
authors = ["Fenyx Forte <fenyx.studies@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polars = {version = ">=1.1.0", extras = ["pyarrow"]}
duckdb = ">=1.0.0"
jinja2 = "^3.1.4"
pdfkit = "^1.0.0"
fastexcel = "^0.10.4"
weasyprint = "^62.2"
mkdocs = "^1.6.0"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}
mkdocs-material = "^9.5.28"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.5"
connectorx = "^0.3.3"
sqlalchemy = "^2.0.31"
pandas = "^2.2.2"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
pyarrow = "^17.0.0"
pandera = {extras = ["polars"], version = "^0.20.3"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.4.6"
bandit = "^1.7.8"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
coverage = "^7.5.3"
pytest-cov = "^5.0.0"
faker = "^25.3.0"

[tool.ruff]
line-length = 80
target-version = "py310"
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py", "src/*.py", "tests/*.py"]

[tool.ruff.lint]
ignore = ["D203", "E111", "E203", "F401"]

[tool.black]
line-length = 80
target-version = ['py310']
src = ["src/", "tests/"]

[tool.bandit]
skips = ["B101"]

[tool.pytest.ini_options]
addopts = "-ra --cov"
testpaths = ["tests"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
